1.Empty space issue below the header without description on panels 2.Fix for alignment of inline checkbox and radio widgets

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -735,9 +735,6 @@ html, body {
     li {
       display: inline-block;
       margin-right: 1em;
-      label {
-        padding-left: 0;
-      }
       * {
         vertical-align: middle;
       }
